# 
#  $Id$
# 
#  Copyright © 2005 Keith Packard
# 
#  Permission to use, copy, modify, distribute, and sell this software and its
#  documentation for any purpose is hereby granted without fee, provided that
#  the above copyright notice appear in all copies and that both that
#  copyright notice and this permission notice appear in supporting
#  documentation, and that the name of Keith Packard not be used in
#  advertising or publicity pertaining to distribution of the software without
#  specific, written prior permission.  Keith Packard makes no
#  representations about the suitability of this software for any purpose.  It
#  is provided "as is" without express or implied warranty.
# 
#  KEITH PACKARD DISCLAIMS ALL WARRANTIES WITH REGARD TO THIS SOFTWARE,
#  INCLUDING ALL IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS, IN NO
#  EVENT SHALL KEITH PACKARD BE LIABLE FOR ANY SPECIAL, INDIRECT OR
#  CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM LOSS OF USE,
#  DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE OR OTHER
#  TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR
#  PERFORMANCE OF THIS SOFTWARE.

CONF_FILES = \
	10-LohitGujarati.conf \
	10-fonts-persian.conf \
	33-autohint.conf \
	33-unhinted.conf \
	30-no-sub-pixel.conf \
	30-sub-pixel-rgb.conf \
	30-sub-pixel-bgr.conf \
	30-sub-pixel-vrgb.conf \
	30-sub-pixel-vbgr.conf \
	36-no-bitmaps.conf \
	36-yes-bitmaps.conf \
	60-delicious.conf

EXTRA_DIST = $(CONF_FILES)

configdir=$(CONFDIR)
confddir=$(configdir)/conf.avail

confd_DATA=$(CONF_FILES)
